# cchess

./: README.md  cchess  chess.hs  console-chess.cabal  stack.yaml
src/: Main.hs
src/System/Console/: Chess.hs
